[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "livepeer-gateway-client"
version = "0.1.0"
description = "Higher-level Livepeer client: OIDC/API-key auth, remote signer, and payment refresh for long-running streams"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "livepeer-gateway",
  "authlib>=1.3.0",
  "httpx>=0.28.0",
  "av>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/pymthouse/livepeer-gateway-client"
Repository = "https://github.com/pymthouse/livepeer-gateway-client"
Issues = "https://github.com/pymthouse/livepeer-gateway-client/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]
examples = [
  "numpy>=2.2.0",
]

[tool.uv.sources]
livepeer-gateway = { git = "https://github.com/livepeer/livepeer-python-gateway", rev = "cc31b56f2998e64a4c8677d98eb303bcbbd05c5f" }

[tool.hatch.build.targets.wheel]
packages = ["livepeer_gateway_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["livepeer_gateway_client"]
