[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "livepeer-gateway-client"
version = "0.1.0"
description = "Higher-level Livepeer client: OIDC/API-key auth, remote signer, and payment refresh for long-running streams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "livepeer-gateway",
  "authlib>=1.3.0",
  "httpx>=0.28.0",
  "av>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/pymthouse/livepeer-gateway-client"
Repository = "https://github.com/pymthouse/livepeer-gateway-client"
Issues = "https://github.com/pymthouse/livepeer-gateway-client/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]
examples = [
  "numpy>=2.2.0",
  "aiohttp>=3.11.0",
]

[tool.uv.sources]
# ja/live-runner + session-owned payment lifecycle (PR #31).
livepeer-gateway = { git = "https://github.com/livepeer/livepeer-python-gateway", rev = "81ee7bee7932afe94c882a560e5a8bdba1f2cb04" }

[tool.hatch.build.targets.wheel]
packages = ["livepeer_gateway_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["livepeer_gateway_client"]
